archive/20251111/unix/oracle/main.tf
locals {
  # Common egress rules - allow all outbound traffic
  common_egress_rules = [
    {
      description      = "Allow all outbound IPv4 traffic"
      from_port        = 0
      to_port          = 0
      protocol         = "-1"
      cidr_blocks      = ["0.0.0.0/0"]
      ipv6_cidr_blocks = []
    },
    {
      description      = "Allow all outbound IPv6 traffic"
      from_port        = 0
      to_port          = 0
      protocol         = "-1"
      cidr_blocks      = []
      ipv6_cidr_blocks = ["::/0"]
    }
  ]
}

resource "aws_route53_record" "oracle" {
  count   = var.aws_number
  zone_id = var.dns_zone_id
  name    = "oracle-${count.index}.${var.dns_suffix}"
  type    = "A"
  ttl     = "300"
  records = [element(aws_instance.oracle.*.private_ip, count.index)]
}

# resource "aws_route53_record" "oracle-v6" {
#   count   = "${var.aws_number}"
#   zone_id = "${var.dns_zone_id}"
#   name    = "oracle-${count.index}.${var.dns_suffix}"
#   type    = "AAAA"
#   ttl     = "300"
#   records = ["${aws_instance.oracle.*.ipv6_addresses}"]
# }

resource "aws_instance" "oracle" {
  instance_type          = "m5.xlarge"
  ipv6_address_count     = 1
  count                  = var.aws_number
  availability_zone      = element(var.azs, count.index)
  iam_instance_profile   = var.aws_iip_assumerole_name
  ami                    = var.aws_ami
  key_name               = var.aws_key_pair_auth_id
  ebs_optimized          = "true"
  subnet_id              = element(var.aws_subnet_id, count.index)
  user_data              = file("user_data/config-ora18.sh")
  vpc_security_group_ids = var.aws_sg_ids

  lifecycle {
    ignore_changes = [user_data]
  }
  metadata_options {
    http_tokens                 = var.common_instance_metadata_options.http_tokens
    http_put_response_hop_limit = var.common_instance_metadata_options.http_put_response_hop_limit
    http_endpoint               = var.common_instance_metadata_options.http_endpoint
  }

  root_block_device {
    encrypted   = var.common_instance_root_block_device.encrypted
    volume_size = 80
  }


  tags = {
    Name        = "oracle-${count.index}"
    Environment = "lab"
    type        = "oracle"
    system      = "rhel"
  }
}

resource "aws_volume_attachment" "ebs_u01" {
  device_name = "/dev/xvdb"
  count       = var.aws_number
  volume_id   = element(aws_ebs_volume.oracle_u01.*.id, count.index)
  instance_id = element(aws_instance.oracle.*.id, count.index)
}

resource "aws_ebs_volume" "oracle_u01" {
  count             = var.aws_number
  availability_zone = element(var.azs, count.index)
  type              = "gp2"
  size              = var.aws_size_oracle_u01
}

resource "aws_security_group" "oracle" {
  name        = "tf_ezlab_oracle"
  description = "Used in the terraform"
  vpc_id      = var.aws_vpc_id

  # listener for clients
  ingress {
    from_port   = 1521
    to_port     = 1521
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }

  ingress {
    from_port   = 5500
    to_port     = 5500
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }

  ingress {
    from_port   = 9090
    to_port     = 9090
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }

  # Dynamic egress rules - eliminates code duplication
  dynamic "egress" {
    for_each = local.common_egress_rules
    content {
      description      = egress.value.description
      from_port        = egress.value.from_port
      to_port          = egress.value.to_port
      protocol         = egress.value.protocol
      cidr_blocks      = egress.value.cidr_blocks
      ipv6_cidr_blocks = egress.value.ipv6_cidr_blocks
    }
  }
}
